nuevos monstruos y equipamiento

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <button id="skillButton" onclick="useSkill()">Habilidad</button>
         <button id="changeWeaponButton" class="hidden" onclick="changeWeapon()">Cambiar Conjunto</button>
         <button id="keepWeaponButton" class="hidden" onclick="keepWeapon()">Mantener Conjunto</button>
+        <button id="usePotionButton" class="hidden" onclick="usePotion()">Usar Poción</button>
 
         <!-- Cuadro de estadísticas del jugador -->
         <div id="playerStats" class="player-stats">
@@ -64,6 +65,8 @@
             <p>Vida del Escudo: <span id="playerShieldHp"></span></p>
             <p>Probabilidad de Bloqueo: <span id="playerShieldBlock"></span></p>
             <p>Habilidad Restante: <span id="skillUses"></span></p>
+            <p>Brazalete: <span id="playerBracelet"></span></p>
+            <p>Pociones: <span id="playerPotions"></span></p>
         </div>
     </div>
 
@@ -75,6 +78,7 @@
     <script src="juego2.js"></script>
 </body>
 </html>
+
 
 
 
